[package]
name = "peuler"
version = "0.1.0"
edition = "2018"

[lib]
name = "peulerlib"
path = "src/lib.rs"
bench = false

[[bench]]
name = "prime_benchmarks"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

